--- a/client/src/components/AppHeader.scss
+++ b/client/src/components/AppHeader.scss
@@ -1,9 +1,10 @@
 .AppHeader {
+    align-self: flex-start;
     position: fixed;
     top: 0;
     height: 92px;
     box-sizing: border-box;
-    width: calc(100% - 15.5px);
+    width: 100%;
     padding-block: 20px;
     padding-inline: 40px;
     border-top: 2px solid var(--color-accent2);
@@ -16,7 +17,7 @@
     will-change: backdrop-filter, box-shadow;
 
     &.scrolled {
-        background: rgba(0,0,0,0.25);
+        background: var(--backdrop-filter-color);
         backdrop-filter: blur(6px);
         box-shadow: 0 2px 6px rgba(0,0,0,0.2);
     }
@@ -51,4 +52,16 @@
     background-repeat: no-repeat;
     margin-right: auto;
     margin-left: 10px;
+}
+
+.OverlayBlur {
+    height: 100%;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    backdrop-filter: blur(6px);
+    background: var(--backdrop-filter-color);
+    z-index: 1999;
+    transition: 0.3s ease all;
 }
