--- a/client/src/components/NavBar.scss
+++ b/client/src/components/NavBar.scss
@@ -1,6 +1,6 @@
 .NavBar {
     position: fixed;
-    top: 92px;
+    top: 90px;
     left: -100px;
     flex-shrink: 0;
     height: calc(100dvh - 92px - 92px);
@@ -8,7 +8,9 @@
     display: flex;
     flex-direction: column;
     gap: 24px;
+    z-index: 4000;
     padding-block: 12px;
+    padding-left: 12.5px;
     justify-content: flex-start;
     border-right: var(--border-main);
     align-items: center;
@@ -17,7 +19,7 @@
 }
 
 .NavBar.visible {
-    left: 12.5px;
+    left: 0px;
     visibility: visible;
 }
 
@@ -40,4 +42,11 @@
 
 .NavItem:active {
     transform: scale(.99);
+}
+
+@media (max-width: 1060px) {
+    .NavBar {
+        height: 100dvh;
+        background-color: var(--backdrop-filter-color);
+    }
 }
