--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -24,7 +24,7 @@
 
 // Global style vars for global css changes
 #root {
-    --color-main: #0A0E14;
+    --color-main: rgb(10, 14, 20);
     --color-secondary: #0D1218;
     --color-tertiary: rgba(50, 50, 50, 0.5);
     --color-text: rgb(255, 254, 238);
@@ -33,6 +33,7 @@
     --border-secondary: 1px solid rgba(255, 255, 255, 0.1);
     --border-optional: none;
     --icon-color: invert(1);
+    --backdrop-filter-color: rgba(10, 14, 20, 0.25);
     --input-color-placeholder: rgba(255, 255, 255, 0.12);
     --color-accent1: #124F8B;
     --color-accent2: #C52329;
@@ -83,6 +84,7 @@
     --border-secondary: 1px solid rgba(0, 0, 0, 0.1);
     --border-optional: 1px solid rgba(0, 0, 0, 0.05);
     --icon-color: invert(0);
+    --backdrop-filter-color: rgba(255,255,255,.25);
     --input-color-placeholder: rgba(0, 0, 0, 0.2);
 
     --site-logo: url(/apollo-logo-trans-light.png);
