--- a/client/src/pages/StartPage.scss
+++ b/client/src/pages/StartPage.scss
@@ -4,6 +4,8 @@
     display: flex;
     flex-direction: column;
     padding-top: 92px;
+    justify-content: center;
+    align-items: center;
 }
 
 .StartContent {
